rnsc/test_data/integration/error/parser/type_hints/class/no_operand.rns
.class   @class ; no operand provided
.super java/lang/Object